--- a/mrt/server/templates/search_basic.html
+++ b/mrt/server/templates/search_basic.html
@@ -14,6 +14,9 @@
         <button type="submit">Search</button>
     </p>
 </form>
+{% if message %}
+<p>{{message}}</p>
+{% endif %}
 {% if outcomes %}
 <table border="1">
     <tr>
