enhance README.md.

--- a/mrt/server/templates/search_basic.html
+++ b/mrt/server/templates/search_basic.html
@@ -123,7 +123,7 @@
 <body>
 <h2>Please Search:</h2>
 <div id="left" style="float:left;width:50%">
-    <form id="search_form" action="/search_basic" method="post">
+    <form id="search_form" action="/" method="post">
         <p><input id="src_name" name="src_name" placeholder="Source Station" value="{{ src_name }}"></p>
         <p><input id="des_name" name="des_name" placeholder="Destination Station" value="{{ des_name }}"></p>
         <p><input id="time" name="time" type="datetime-local" value="{{ time }}"/></p>
