--- a/mrt/server/templates/search_basic.html
+++ b/mrt/server/templates/search_basic.html
@@ -138,10 +138,10 @@
     <table id="result_table" border="1">
         <tr>
             <th>Actions</th>
-            <th>From</th>
-            <th>Arrive</th>
-            <th>From Time</th>
-            <th>Arrive Time</th>
+            <th>Departure</th>
+            <th>Arrival</th>
+            <th>Departure Time</th>
+            <th>Arrival Time</th>
             <th>Duration</th>
         </tr>
 
